--- a/ESA-api/ESA-api.csproj
+++ b/ESA-api/ESA-api.csproj
@@ -30,12 +30,7 @@
     <Folder Include="Controllers\UserAction\PriviligedUser\" />
     <Folder Include="Mapping\DTO\EducationDTO\ExamsDTO\" />
     <Folder Include="Mapping\DTO\EducationDTO\LessonsDTO\" />
-    <Folder Include="Repositories\Judge\ComplexityRepository\" />
-    <Folder Include="Repositories\Judge\LevelRepository\" />
-    <Folder Include="Repositories\Judge\RestrictionRepository\" />
-    <Folder Include="Repositories\Judge\VerificationDataRepository\" />
-    <Folder Include="Repositories\Judge\VerdictRepository\" />
-    <Folder Include="Repositories\Judge\SolutionRepository\" />
+    <Folder Include="Repositories\Common\FileShareRepository\" />
     <Folder Include="Repositories\UserRepository\AdminUser\" />
     <Folder Include="Services\Common\BadgeService\" />
     <Folder Include="Services\Education\ExamService\" />
