--- a/ESA-api/ESA-api.csproj
+++ b/ESA-api/ESA-api.csproj
@@ -28,16 +28,15 @@
     <Folder Include="Controllers\Judgement\" />
     <Folder Include="Controllers\UserAction\NormalUser\" />
     <Folder Include="Controllers\UserAction\PriviligedUser\" />
-    <Folder Include="Mapping\DTO\EducationDTO\ExamsDTO\" />
-    <Folder Include="Mapping\DTO\EducationDTO\LessonsDTO\" />
+    <Folder Include="Mapping\DTO\CommonDTO\FileSharesDTO\" />
+    <Folder Include="Mapping\DTO\CommonDTO\StatisticsDTO\" />
+    <Folder Include="Mapping\DTO\EducationDTO\FlashcardsDTO\" />
+    <Folder Include="Mapping\DTO\EducationDTO\FlashcardSetsDTO\" />
     <Folder Include="Repositories\Common\FileShareRepository\" />
     <Folder Include="Repositories\UserRepository\AdminUser\" />
     <Folder Include="Services\Common\BadgeService\" />
-    <Folder Include="Services\Education\ExamService\" />
-    <Folder Include="Services\Education\LessonService\" />
-    <Folder Include="Services\Education\FlashcardService\" />
-    <Folder Include="Services\Education\FlashcardSetService\" />
-    <Folder Include="Services\Judge\" />
+    <Folder Include="Services\Common\FileShareService\" />
+    <Folder Include="Services\Common\StatisticsService\" />
     <Folder Include="Services\UserAction\" />
   </ItemGroup>
 
