--- a/ESA-api/appsettings.json
+++ b/ESA-api/appsettings.json
@@ -3,9 +3,9 @@
     "AppSettings": {
       "Token": "super secret key"
     },
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=DESKTOP-VNTQ8E8;Database=esa_app_db;Trusted_Connection=True;"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:esa-db-server.database.windows.net,1433;Initial Catalog=esa_db;Persist Security Info=False;User ID=mateusz;Password=Magisterka1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
     "Logging": {
       "LogLevel": {
         "Default": "Warning"
