--- a/ESA-api/appsettings.Development.json
+++ b/ESA-api/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
+  "AppSettings": {
+    "Token": "super secret key"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:esa-db-server.database.windows.net,1433;Initial Catalog=esa_db;Persist Security Info=False;User ID=mateusz;Password=Magisterka1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
