--- a/ESA-api/ESA-api.csproj
+++ b/ESA-api/ESA-api.csproj
@@ -31,11 +31,18 @@
     <Folder Include="Mapping\DTO\EducationDTO\FlashcardSetsDTO\" />
     <Folder Include="Repositories\Common\FileShareRepository\" />
     <Folder Include="Repositories\UserRepository\AdminUser\" />
-    <Folder Include="Resources\Assets\" />
     <Folder Include="Services\Common\BadgeService\" />
     <Folder Include="Services\Common\FileShareService\" />
     <Folder Include="Services\Common\StatisticsService\" />
     <Folder Include="Services\UserAction\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Resources\Assets\add.png" />
+    <None Include="wwwroot\Resources\Assets\course.png" />
+    <None Include="wwwroot\Resources\Assets\done_icon.png" />
+    <None Include="wwwroot\Resources\Assets\login_button_icon.jpg" />
+    <None Include="wwwroot\Resources\Assets\user-login.png" />
   </ItemGroup>
 
 </Project>
