--- a/ESA-api/ESA-api.csproj
+++ b/ESA-api/ESA-api.csproj
@@ -37,5 +37,8 @@
     <Folder Include="Services\UserAction\" />
     
   </ItemGroup>
-
+  <ItemGroup>
+    <Folder Include="Resources\Assets\" />
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
 </Project>
