--- a/ESA-api/appsettings.Development.json
+++ b/ESA-api/appsettings.Development.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:esa-db-server.database.windows.net,1433;Initial Catalog=esa_db_2;Persist Security Info=False;User ID=mateusz;Password=Magisterka1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:esa-db-server.database.windows.net,1433;Initial Catalog=esa_db;Persist Security Info=False;User ID=mateusz;Password=Magisterka1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
