--- a/ESA-api/appsettings.Development.json
+++ b/ESA-api/appsettings.Development.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "mateusz-magisterka",
+    "ApiKey": "762673638139385",
+    "ApiSecret": "j2u4ToicsJjt1K884G13CVz2MJM"
+  },
   "AllowedHosts": "*"
 }
