--- a/ESA-api/appsettings.json
+++ b/ESA-api/appsettings.json
@@ -1,15 +1,20 @@
 {
-  
-    "AppSettings": {
-      "Token": "super secret key"
-    },
+
+  "AppSettings": {
+    "Token": "super secret key"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:esa-db-server.database.windows.net,1433;Initial Catalog=esa_db;Persist Security Info=False;User ID=mateusz;Password=Magisterka1!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "CloudinarySettings": {
+    "CloudName": "mateusz-magisterka",
+    "ApiKey": "762673638139385",
+    "ApiSecret": "j2u4ToicsJjt1K884G13CVz2MJM"
+  },
+  "AllowedHosts": "*"
+}
